--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title "Agence de Décines-Charpieu" %}
+{% block title "Tous les biens" %}
 {% block body %}
-    <div class="container">
-        <h1>Yo les gens</h1>
+    <div class="container mt-4">
+        <h1>Voir tous les biens</h1>
         <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis
             les années 1500, quand un imprimeur anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq
             siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles
