--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -18,7 +18,7 @@
                 <img class="card-img-top" src="holder.js/100px180/" alt="">
                 <div class="card-body">
                     <h4 class="card-title">Title
-                        <a href="#">{{ property.title }}</a>
+                        <a href="{{ path('property.show', {id: property.id, slug: property.slug}) }}">{{ property.title }}</a>
                     </h4>
                     <p class="card-text">{{ property.city }} ({{ property.postalCode }})</p>
                     <div class="text-primary">{{ property.formattedPrice }} €</div>
