--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -13,9 +13,9 @@
         <h2>Les derniers biens</h2>
         <div class="row flex">
             {% for property in properties %}
-            <div class="col-3"></div>
+            <div class="col-2"></div>
             <div class="card text-left">
-                <img class="card-img-top" src="holder.js/100px180/" alt="">
+                <img class="card-img-top" src="#" alt="">
                 <div class="card-body">
                     <h4 class="card-title">Title
                         <a href="{{ path('property.show', {id: property.id, slug: property.slug}) }}">{{ property.title }}</a>
