--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
     {% block stylesheets %}{% endblock %}
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+<nav class="navbar navbar-expand-lg navbar-light bg-info">
     <a class="navbar-brand" href="{{ path('home') }}">Mon Agence</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -18,6 +18,9 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" {% if current_menu is defined and current_menu == 'properties' %}active{% endif %} href="{{ path('property.index') }}">Acheter</a>
+            </li>
+            <li class="nav-item active">
+                <a href="{{ path('admin.property.index') }}" class="nav-link">admin</a>
             </li>
         </ul>
     </div>
