--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -13,8 +13,8 @@
                 <div class="col-md-4">
                     <h1>{{ property.title }}</h1>
                     <h2>{{ property.rooms }} pièces - {{ property.surface }} m²</h2>
-                    <div class="text-primary"> {{ property.formattedPrice }}</div>
-                    <a href="#" class="btn btn-primary">Contacter l'agence</a>
+                    <div class="text-info"> {{ property.formattedPrice }}</div>
+                    <a href="#" class="btn btn-info">Contacter l'agence</a>
                 </div>
             </div>
         </div>
