--- a/templates/admin/property/index.html.twig
+++ b/templates/admin/property/index.html.twig
@@ -23,6 +23,9 @@
                 {% endfor %}
             </tbody>
         </table>
+        <div class="text-right">
+            <a href="{{ path('admin.property.create') }}" class="btn btn-info">Créer un nouveau bien</a>
+        </div>
         </div>
     </div>
 {% endblock %}
