add admin security and new user with Fixtures

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,13 @@
                 <a href="{{ path('admin.property.index') }}" class="nav-link">admin</a>
             </li>
         </ul>
+        {% if app.user %}
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="{{ path('logout') }}" class="nav-link">Se déconnecter</a>
+                </li>
+            </ul>
+        {% endif %}
     </div>
 </nav>
 {% block body %}{% endblock %}
