--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -7,7 +7,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-
+                    {% if property.filename %}
+                        <img src="{{ vich_uploader_asset(property, 'imageFile') | imagine_filter('thumb') }}" alt="card-img-top" style="width: 100%; height: auto;">
+                    {% else %}
+                        <img src="{{ '/images/properties/empty.jpg' | imagine_filter('thumb') }}" alt="card-img-top" style="width: 100%; height: auto;">
+                    {% endif %}
                 </div>
 
                 <div class="col-md-4">
@@ -54,6 +58,11 @@
         </div>
         <div class="col-md-4">
             <h2>Spécificités</h2>
+            <ul class="list-group">
+                {% for option in property.options %}
+                    <li class="list-group-item">{{ option.name }}</li>
+                {% endfor %}
+            </ul>
         </div>
     </div>
 {% endblock %}
